# panel-viz-mcp

./: .gitignore  LICENSE  README.md  mrve.py  pyproject.toml  test_tools.py
demos/: DEMO_SCRIPT.md  ml_dashboard.py
examples/: sample_data.csv
src/panel_viz_mcp/: __init__.py  app.py  cdn.py  chart_builders.py  constants.py  server.py  themes.py
src/panel_viz_mcp/code_generators/: __init__.py  geo.py  multi.py  standard.py
src/panel_viz_mcp/resources/: __init__.py  dashboard_html.py  multi_html.py  stream_html.py  viz_html.py
src/panel_viz_mcp/tools/: __init__.py  annotation.py  custom_app.py  dashboard.py  export.py  multi.py  panel_launch.py  stream.py  viz.py
test-client/: index.html
tests/: test_tools.py
